# black-white-filter

./: CMakeLists.txt  main.cpp
